--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -21,9 +21,12 @@ window#waybar.hidden {
 }
 
 #workspaces button {
-  all: initial; /* Remove GTK theme values (waybar #1351) */
-  min-width: 0; /* Fix weird spacing in materia (waybar #450) */
-  box-shadow: inset 0 -3px transparent; /* Use box-shadow instead of border so the text isn't offset */
+  all: initial;
+  /* Remove GTK theme values (waybar #1351) */
+  min-width: 0;
+  /* Fix weird spacing in materia (waybar #450) */
+  box-shadow: inset 0 -3px transparent;
+  /* Use box-shadow instead of border so the text isn't offset */
   padding: 6px 18px;
   margin: 6px 3px;
   border-radius: 4px;
@@ -37,10 +40,10 @@ window#waybar.hidden {
 }
 
 #workspaces button:hover {
- box-shadow: inherit;
- text-shadow: inherit;
- color: #1e1e2e;
- background-color: #cdd6f4;
+  box-shadow: inherit;
+  text-shadow: inherit;
+  color: #1e1e2e;
+  background-color: #cdd6f4;
 }
 
 #workspaces button.urgent {
@@ -78,9 +81,11 @@ window#waybar.hidden {
 #memory {
   background-color: #fab387;
 }
+
 #battery {
   background-color: #f38ba8;
 }
+
 @keyframes blink {
   to {
     background-color: #f38ba8;
@@ -99,6 +104,7 @@ window#waybar.hidden {
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
+
 #battery.charging {
   background-color: #a6e3a1;
 }
@@ -127,12 +133,12 @@ window#waybar.hidden {
 
 
 tooltip {
-border-radius: 8px;
-padding: 15px;
-background-color: #131822;
+  border-radius: 8px;
+  padding: 15px;
+  background-color: #131822;
 }
 
 tooltip label {
-padding: 5px;
-background-color: #131822;
+  padding: 5px;
+  background-color: #131822;
 }
